package programacion3.Parcial.dto;

public record AccionVehiculoResponse(
        String patente,
        String estadoActual,
        String mensaje
) {
}
