package programacion3.Parcial.dto;

public record CambioCriterioTarifaResponse(
        String criterioActivo,
        String mensaje
) {
}
