package programacion3.Parcial.exception;

public class EcoRideException extends RuntimeException {

    public EcoRideException(String message) {
        super(message);
    }
}
