package programacion3.Parcial.model.pago;

public interface ProcesadorPago {

    String cobrar(double monto);
}
